# js-framework-benchmark

./: package-lock.json  package.json
frameworks/keyed/dioxus/: Cargo.toml  package.json  trunk.html
frameworks/keyed/dioxus-new/: Cargo.toml  index.html  package-lock.json  package.json  trunk.html  trunk.toml
frameworks/keyed/dioxus-new/bundled-dist/: dioxus_benchmark.js  dioxus_benchmark_bg.wasm  index.html
frameworks/keyed/dioxus-new/bundled-dist/snippets/dioxus-interpreter-js-459fb15b86d869f7/src/: interpreter_opter.js
frameworks/keyed/dioxus-new/src/: main.rs
frameworks/keyed/dioxus/bundled-dist/: dioxus_benchmark.js  dioxus_benchmark_bg.wasm  index.html
frameworks/keyed/dioxus/bundled-dist/snippets/dioxus-interpreter-js-459fb15b86d869f7/: inline0.js
frameworks/keyed/dioxus/bundled-dist/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
frameworks/keyed/dioxus/src/: main.rs
frameworks/keyed/fast-dom/: Cargo.toml  index.html  isKeyed.js  package.json  trunk.html  trunk.toml
frameworks/keyed/fast-dom/bundled-dist/: fast-dom.js  fast-dom_bg.wasm  index.html
frameworks/keyed/fast-dom/bundled-dist/snippets/fast_dom-a7013dc5d9718661/: interpreter.js
frameworks/keyed/fast-dom/src/: lib.rs
frameworks/keyed/leptos/bundled-dist/: js-framework-benchmark-leptos.js  js-framework-benchmark-leptos_bg.wasm
frameworks/keyed/riot/: package-lock.json
frameworks/keyed/sledgehammer/: Cargo.toml  index.html  out.txt  package-lock.json  trunk.html
frameworks/keyed/sledgehammer-bindgen/: Cargo.toml  event.js  index.html  inlined.js  package-lock.json  package.json  trunk.toml
frameworks/keyed/sledgehammer-bindgen/bundled-dist/: index.html  sledgehammer-bindgen-benchmark.js  sledgehammer-bindgen-benchmark_bg.wasm
frameworks/keyed/sledgehammer-bindgen/bundled-dist/snippets/sledgehammer-bindgen-benchmark-890ce22e76ad82a1/: event.js  inline0.js
frameworks/keyed/sledgehammer-bindgen/src/: main.rs
frameworks/keyed/sledgehammer/bundled-dist/: index.html  sledgehammer-benchmark.js  sledgehammer-benchmark_bg.wasm  sledgehammer.js  sledgehammer_bg.wasm
frameworks/keyed/sledgehammer/src/: lib.rs  main.rs
frameworks/keyed/voby/: package-lock.json
frameworks/keyed/wasm-bindgen/: Cargo.toml  package.json
frameworks/keyed/wasm-bindgen/bundled-dist/: 235.js  index.js
frameworks/non-keyed/ef-js/: package-lock.json
webdriver-ts/: package-lock.json  package.json  results.json
webdriver-ts-results/: package-lock.json  package.json  table.html
webdriver-ts-results/src/: Common.ts  results.ts
webdriver-ts/src/: common.ts
