[package]
name = "dioxus_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
# dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus = { path = "c:/users/desktop/github/dioxus/packages/dioxus" }
dioxus-web = { path = "c:/users/desktop/github/dioxus/packages/web" }
smallvec = "1.9.0"

wasm-bindgen = { version = "*" }
js-sys = "*"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1