[package]
name = "dioxus_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "breaking" }
dioxus-web = { git = "https://github.com/ealmloff/dioxus", branch = "breaking", default-features = false }
dioxus-signals = { git = "https://github.com/ealmloff/dioxus", branch = "breaking" }
js-sys = "*"
rustc-hash = "1.1.0"
