[package]
name = "sledgehammer-bindgen-benchmark"
version = "0.2.0"
edition = "2021"

[dependencies]
sledgehammer-bindgen = { path = "d:/users/desktop/github/sledgehammer-bindgen" }
wasm-bindgen = "0.2"
js-sys = "0.3"
# sledgehammer_utils = { git = "https://github.com/demonthos/sledgehammer_utils" }
sledgehammer_utils = { path = "d:/users/desktop/github/sledgehammer_utils" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
