[package]
name = "sledgehammer"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fast_dom = { path = "d:/users/desktop/github/fast_dom" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
opt-level = 3
