[package]
name = "sledgehammer-benchmark"
version = "0.2.0"
edition = "2021"

[dependencies]
# sledgehammer = "0.2.0"
sledgehammer = { path = "d:/users/desktop/github/fast_dom/web" }
sledgehammer-prebuild = { path = "d:/users/desktop/github/fast_dom/prebuild" }
wasm-bindgen = "0.2"
js-sys = "0.3"
lol_alloc = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Event',
  'EventTarget',
  'Window',
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
